--- a/docs/manual/gui/editing.qmd
+++ b/docs/manual/gui/editing.qmd
@@ -24,7 +24,7 @@ To fix warnings about strings needing context, place the cursor into the editor 
 Next, click the `r keys("Insert")` button on the ribbon and select **Translator Comment...**.
 Then, select which translator comment style that you wish to use. (*gettext* and *Qt* styles are available.)
 Enter a comment that will explain to the translators what "TABLE" means in this context, providing guidance for how they should translate it.
-Click `r keys("OK")` and your comment with the comment style that you selected (e.g., "// TRANSLATORS: ") be inserted in front of the function call.
+Click `r keys("OK")` and your comment with the comment style that you selected (e.g., "// TRANSLATORS: ") will be inserted in front of the function call.
 
 ::: {.notesection data-latex=""}
 This warning is emitted when the option **Check for ambiguous strings that lack a translator comment** (from the **Source Code** settings) is checked.
@@ -44,10 +44,10 @@ By following the aforementioned steps, this will be re-encoded to "B\\U00000142\
 This warning is emitted when the option **Unencoded extended ASCII characters** (from the **Additional Checks** settings) is checked.
 :::
 
-### Mark Selection for Translation {-}
+### Make Selection Translatable {-}
 
-To mark a string as translatable, select the string in the editor and select **Mark Selection for Translation...** from the `r keys("Insert")` button.
-From the **Mark Selection for Translation** dialog, options are available for choosing which translation function to use, along with providing a domain or context (if applicable).
+To make a string translatable, select the string in the editor and select **Make Selection Translatable...** from the `r keys("Insert")` button.
+From the **Make Selection Translatable** dialog, options are available for choosing which translation function to use, along with providing a domain or context (if applicable).
 The translation marking functions available are compatible with *gettext*, *wxWidgets*, *Qt*, and *KDE*.
 
 ### Mark Selection as Non-translatable {-}
