Add support for detecting multipart strings

--- a/docs/manual/cites.bib
+++ b/docs/manual/cites.bib
@@ -80,3 +80,14 @@
   number     = {2},
   pages      = {37}
 }
+
+@article{madden:2019,
+  author     = {Blake Madden},
+  title      = {Localization workarounds for non-internationalized software},
+  shorthand  = {Workarounds},
+  year       = {2019},
+  journal    = {MultiLingual},
+  volume     = {30},
+  number     = {6},
+  pages      = {65-66}
+}
