--- a/docs/manual/command-line/checks.qmd
+++ b/docs/manual/command-line/checks.qmd
@@ -177,6 +177,12 @@ Check for halfwidth Kanas, Hanguls, and punctuation in source and target strings
 
 This is performed on *gettext* \*.po files.
 
+- `multipartString`
+
+Check for strings that appear to contain multiple parts that are being sliced at runtime.
+
+This is performed on *gettext* \*.po files.
+
 - `lengthInconsistency`
 
 Check for suspect lengths of translations compared to their source strings.
