Add Japanese font to display halfwidth Kana

--- a/docs/manual/latex/preamble.tex
+++ b/docs/manual/latex/preamble.tex
@@ -27,6 +27,8 @@
 \usepackage{bbding}
 \usepackage{amsthm}
 \usepackage{xeCJK}
+\setCJKmainfont{MS Gothic} % for \rmfamily
+\setCJKsansfont{MS Gothic} % for \sffamily
 \usepackage[all]{nowidow}
 \usepackage{menukeys}
 \usepackage{amsmath}
