Fix citations, reformat manual

--- a/docs/manual/cites.bib
+++ b/docs/manual/cites.bib
@@ -12,6 +12,7 @@
 
 @misc{mfc-ids,
   title = {TN020: ID Naming and Numbering Conventions},
+  shorthand = {ID Naming},
   author = {Microsoft},
   url = {https://learn.microsoft.com/en-us/cpp/mfc/tn020-id-naming-and-numbering-conventions?view=msvc-170}
 }
@@ -35,13 +36,15 @@
 }
 
 @misc{ms-shell-dlg,
-  title = {Working with Strings},
+  title = {Using MS Shell Dlg and MS Shell Dlg 2},
+  shorthand = {MS Shell Dlg},
   author = {Microsoft},
   url = {https://learn.microsoft.com/en-us/windows/win32/intl/using-ms-shell-dlg-and-ms-shell-dlg-2}
 }
 
 @misc{i18n-mistakes,
   title = {Development/Tutorials/Localization/i18n Mistakes},
+  shorthand = {i18n Mistakes},
   author = {KDE},
   url = {https://techbase.kde.org/Development/Tutorials/Localization/i18n_Mistakes}
 }
